# RVU_PQC_Research

./: .gitignore  falcon1024_risc-v_result.md  mlDSA65_risc-v_result.md  mlDSA87_risc-v_result.md  mlKEM512_risc-v_result.md  mlKEM768_risc-v_result.md
pico-examples/: CMakeLists.txt  (+1 more)
pico-examples/async_context/simple_at_time_worker/: CMakeLists.txt  README.md  simple_at_time_worker.c
pico-examples/bluetooth/: CMakeLists.txt  README.md
pico-examples/bluetooth/ble_doorbell/: CMakeLists.txt  client.c  server.c
pico-examples/bluetooth/ble_pointer/: CMakeLists.txt  README.md  ble_pointer.c
pico-examples/bluetooth/ble_secure_temp_sensor/: CMakeLists.txt  README.md  ble_temp_client.py  ble_temp_server.py  client.c  server.c
pico-examples/bluetooth/ble_temp_sensor/: CMakeLists.txt  README.md  client.c  server.c
pico-examples/bluetooth/ble_wifi_provisioner/: CMakeLists.txt  README.md  example.c  provisioning.gatt  set_credentials.py  wifi_prov_lib.c  wifi_prov_lib.h
pico-examples/bluetooth/btstack_examples/: CMakeLists.txt  btstack_audio_pico.c  main.c
pico-examples/bluetooth/btstack_examples/a2dp_sink_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/a2dp_source_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/ancs_client_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/att_delayed_response/: CMakeLists.txt  btstack_config.h
pico-examples/bluetooth/btstack_examples/avrcp_browsing_client/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/dut_mode_classic/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gap_dedicated_bonding/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gap_inquiry/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gap_le_advertisements/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gap_link_keys/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_battery_query/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_browser/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_counter/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_counter_with_wifi/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_device_information_query/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_heart_rate_client/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_streamer_server/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/gatt_streamer_server_with_wifi/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hfp_ag_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hfp_hf_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hid_host_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hid_keyboard_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hid_mouse_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hog_boot_host_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hog_host_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hog_keyboard_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hog_mouse_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hsp_ag_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/hsp_hs_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/le_credit_based_flow_control_mode_client/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/le_credit_based_flow_control_mode_server/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/le_mitm/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/le_streamer_client/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/led_counter/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/mod_player/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/nordic_spp_le_counter/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/nordic_spp_le_streamer/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/pan_lwip_http_server/: CMakeLists.txt  lwipopts.h
pico-examples/bluetooth/btstack_examples/pbap_client_demo/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/sdp_bnep_query/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/sdp_general_query/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/sdp_rfcomm_query/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/sine_player/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/sm_pairing_central/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/sm_pairing_peripheral/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/spp_and_gatt_counter/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/spp_and_gatt_streamer/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/spp_counter/: CMakeLists.txt
pico-examples/bluetooth/btstack_examples/spp_flowcontrol/: CMakeLists.txt
pico-examples/bluetooth/config/: btstack_config_common.h
pico-examples/flash/nuke/: CMakeLists.txt  nuke.c
pico-examples/i2c/ina228_i2c/: CMakeLists.txt  README.adoc  ina228_i2c.c  ina228_i2c.fzz
pico-examples/i2c/ina237_i2c/: CMakeLists.txt  ina237_i2c.c
pico-examples/i2c/ina260_i2c/: CMakeLists.txt  ina260_i2c.c  ina260_i2c.fzz
pico-examples/low_power/low_power_dormant/: CMakeLists.txt  low_power_clksrc.c  low_power_dormant_gpio.c  low_power_dormant_timer.c
pico-examples/low_power/low_power_pstate/: CMakeLists.txt  low_power_pstate_gpio.c  low_power_pstate_timer.c
pico-examples/low_power/low_power_sleep/: CMakeLists.txt  low_power_sleep_gpio.c  low_power_sleep_timer.c
pico-examples/spi/ssd1309_spi/: CMakeLists.txt  README.adoc  ssd1309_font.h  ssd1309_spi.c  wiring_diagram.fzz
pico-examples/spi/ssd1309_stdout_spi/: CMakeLists.txt  README.adoc  ssd1309_stdout_spi.c
pico-examples/universal/blink_universal/: CMakeLists.txt  blink_universal.c
pico-examples/usb/: CMakeLists.txt
pqc-pico/: .gitignore  CMakeLists.txt
pqc-pico/src/: benchmark.c  benchmark.h  main.c  mlkem_demo.c  mlkem_demo.h  randombytes.c
(+79 files in other folders)
