if (NOT PICO_CYW43_SUPPORTED)
    return()
endif()
if (DEFINED ENV{PICO_BTSTACK_PATH} AND (NOT PICO_BTSTACK_PATH))
    set(PICO_BTSTACK_PATH $ENV{PICO_BTSTACK_PATH})
    message("Using PICO_BTSTACK_PATH from environment ('${PICO_BTSTACK_PATH}')")
endif ()
set(BTSTACK_TEST_PATH "src/bluetooth.h")
if (NOT PICO_BTSTACK_PATH)
    set(PICO_BTSTACK_PATH ${PICO_SDK_PATH}/lib/btstack)
    if (PICO_CYW43_SUPPORTED AND NOT EXISTS ${PICO_BTSTACK_PATH}/${BTSTACK_TEST_PATH})
        message(WARNING "btstack submodule has not been initialized; Pico Bluetooth support will be unavailable.
            hint: try 'git submodule update --init' from your SDK directory (${PICO_SDK_PATH}).")
    endif()
elseif (NOT EXISTS ${PICO_BTSTACK_PATH}/${BTSTACK_TEST_PATH})
    message(WARNING "PICO_BTSTACK_PATH specified but content not present.")
endif()
if (NOT TARGET pico_btstack_base)
    message("Skipping Pico Bluetooth examples as support is not available")
else()
    add_subdirectory(btstack_examples)
    add_subdirectory(ble_doorbell)
    add_subdirectory(ble_pointer)
    add_subdirectory(ble_secure_temp_sensor)
    add_subdirectory(ble_temp_sensor)
    add_subdirectory(ble_wifi_provisioner)
endif()
